# psxavenc

./: .editorconfig  .gitignore  LICENSE  README.md  meson.build
.github/scripts/: build.sh  mingw-cross.txt
.github/workflows/: build.yml
libpsxav/: adpcm.c  cdrom.c  libpsxav.h
psxavenc/: args.c  args.h  cdrom.c  common.h  decoding.c  decoding.h  filefmt.c  filefmt.h  main.c  mdec.c  mdec.h  psxavenc.c
